--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,62 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 19 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/7o5RJUW.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm proud of myself ♡ !!
+i've been making a lot of progress in my projects and improving <img src="https://i.imgur.com/QQu4TEN.gif"/>
+i hope i can keep this productive mood so i can be rewarded in my bday, that is coming soon ~ 
+please don't forget to check out <a text-decoration: none; href="https://shybunny.middlepot.com" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my online store</font></a>, i need support to buy more crafting supplies ♡♡
+i'm gonna add new stuff very soon, next post i'll show you the best things i made <img src="https://i.imgur.com/C8mN7yZ.gif"/>
+
+my accounts have been growing a lot lately and it makes me really happy.. i have no words to explain ; ;
+i love making content that make people smile, i try my best to keep my accounts helpful & safe for everyone ...
+i don't believe in taking numbers as a sign that i'm being sucessful, but i've been checking my followers frequently and removing all the creeps and ghosts, i want all of my followers to be real people that are truly interested in my content !
+besides being only mutuals with friends, i can safely say that i really appreciate every single person that interact with my posts ♡
+all of my comfy & positive content is made with my honest feelings, so yes, i am happy that my accounts are growing !!
+i can reach all of these lovely people with my stuff, it's surely a good thing, it's exactly the reason why i keep my accounts and don't just post everything in this website.
+sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts ..
+tumblr is my fav place to post images in original quality ; youtube is my fav place to make playlists ; twitter is my fav place to post ascii art ; instagram is my fav place to post interactive content .
+i really want to post all of these things, to inspire and make people smile with these things.. !
+if i can't reach many people by simply posting everything in my website, i am keeping these accounts happily until the day i feel that they're not useful anymore ♡
+
+btw, recently i've been getting tired of my tumblr layouts, so i decided to finally make some new ones !
+i'm so happy with these, it warms my heart ..</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/K3GRsRj.png"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/viLIPsP.png"/></center><br>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+do you like it ? <img src="https://i.imgur.com/nMbwy3K.gif"/>
+even if i'm not very used to make tumblr layouts, i could manage to make these work well...
+i kinda made a mess with the codes, i don't feel very confident to make these for other people ///
+but i really like making layouts outside platforms so if you want to have a cute website remember that commissions are open ♡
+
+that's it for today, now i'm gonna embroider a little bit.. wish me luck <img src="https://i.imgur.com/6yh79YL.gif"/>
+
+xoxo <img src="https://i.imgur.com/hhsqaw6.gif"/></pre><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
