--- a/gaming.html
+++ b/gaming.html
@@ -1475,6 +1475,7 @@ p { margin: 0; }
 <br>
 <br><br>
 <div style="padding-left:20px">
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=okinawa.harapeco.catRestaurant" target="_blank">purrfect spirits</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.blueskygames.clicker" target="_blank">lutie rpg</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.AngelaHe.TheresThisGirl" target="_blank">there's this girl</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=air.jp.globalgear.jwl" target="_blank">ホウセキの樹　-完全無料で遊べる癒され放置ゲーム</a><br><br>
