--- a/fashion.html
+++ b/fashion.html
@@ -334,56 +334,56 @@ p { margin: 0; }
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
 <br>
 
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
 <br>
 
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
 <br>
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.13.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
 <br>
 
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.29.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/uLtfvWN.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/uLtfvWN.png"/><br>
 <br>
 
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.11.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/wXpMQjF.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/wXpMQjF.png"/><br>
 <br>
 
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
 <br>
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/ruYaJgs.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/ruYaJgs.png"/><br>
 <br>
 
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.15.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/iYVJj7e.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/iYVJj7e.png"/><br>
 <br>
 
 
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 07.24.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/z3qObSr.png"/><br>
+<img width="280px" height="auto" src="https://i.imgur.com/z3qObSr.png"/><br>
 <br>
 
 
@@ -452,43 +452,51 @@ p { margin: 0; }
 <font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
 
-<img width="200px" height="auto" src="https://i.imgur.com/rIpeKyr.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/rIpeKyr.png"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/OpWzrc5.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/OpWzrc5.png"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/lemlujq.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/lemlujq.jpg"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/fKHSMGe.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fKHSMGe.jpg"/><br><br>
 <br>
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/r2xqpHV.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/0JzQAf8.png"/><br><br>
 <br>
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/Q1aekpJ.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/yz4q4dd.png"/><br><br>
 <br>
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/ZfC1w51.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/r2xqpHV.png"/><br><br>
 <br>
 
 <br><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/P7rqRld.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/Q1aekpJ.jpg"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/ZfC1w51.jpg"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/P7rqRld.jpg"/><br><br>
 <br>
 
 
