--- a/blog.html
+++ b/blog.html
@@ -308,6 +308,66 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 10 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/AjCu2pg.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's that time of the year again .. spring time for me, autumn time for many others...
+this post will be more springy but the next one will be halloween themed <sub><img src="https://i.imgur.com/MKoOdYL.gif"/></sub>
+
+these days has been very interesting. i'm still in the balanced mood, which is very good, but i still had some bad days ; ;
+i have a hard time dealing with dissociation from time to time .. for some reason
+i usually feel it when i see people thinking bad things of me that are not true, but it doesn't make much sense if you think about it <sub><img src="https://i.imgur.com/SE0LY2G.gif"/></sub>
+i mean,, let whoever think whatever, right !?
+easier said than done.. but of course i will not give up, i will keep trying my best to just "hmpf" over people's impressions on me !!
+it's not worth it feeling all anxious and worried about who i am just because sometimes stereotypes are stronger than my attitudes <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i know who i am, i know i'm the best me i ever was - and becoming better - so just let people be, they don't know me <sub><img src="https://i.imgur.com/g0m1bqO.gif"/></sub>
+
+well i have many projects going on now, many things to show,, but !! i'm still finishing most of these so i'm gonna show you the recently finished stuff :
+i have this lovely drawing i painted & edited, that turned out as a very lovely wallpaper <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/ybgqrgK.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really really like it <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+it's so so comfy too, i wish i had this quilt irl <sub><img src="https://i.imgur.com/EPCIiy7.gif"/></sub>
+
+i have been experimenting with collages and image editing a lot recently, so i ended up deciding to reorganize & customize my phone !
+this is how it turned out ( i'm very proud ) :</pre><br>
+<br><br>
+
+<center><img width="auto" height="400px" src="https://i.imgur.com/Shftace.png"/> <img width="auto" height="400px" src="https://i.imgur.com/B5wEFcC.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the app icons look like part of the background collage, it's so cute <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i made a secret folder there to put the apps i don't use a lot, not to take up unnecessary space on the main screen
+i can find everything easily now, i choosed all images carefully so there is actually a meaning behind all of these !
+and the moomin lock screen is very cute too, don't you think ?
+
+that's about it for today.. i'm preparing some very cute stuff for the next posts so keep an eye open !!
+stay safe and keep doing your best always <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+xoxo <sub><img src="https://i.imgur.com/UtRe6pG.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -445,60 +505,6 @@ xoxo <sub><img src="https://i.imgur.com/EvXCToz.gif"/></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/auVtubS.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>july . 19 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <img src="https://i.imgur.com/7o5RJUW.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i'm proud of myself ♡ !!
-i've been making a lot of progress in my projects and improving <img src="https://i.imgur.com/QQu4TEN.gif"/>
-i hope i can keep this productive mood so i can be rewarded in my bday, that is coming soon ~ 
-please don't forget to check out <a text-decoration: none; href="https://shybunny.middlepot.com" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my online store</font></a>, i need support to buy more crafting supplies ♡♡
-i'm gonna add new stuff very soon, next post i'll show you the best things i made <img src="https://i.imgur.com/C8mN7yZ.gif"/>
-
-my accounts have been growing a lot lately and it makes me really happy.. i have no words to explain ; ;
-i love making content that make people smile, i try my best to keep my accounts helpful & safe for everyone ...
-i don't believe in taking numbers as a sign that i'm being sucessful, but i've been checking my followers frequently and removing all the creeps and ghosts, i want all of my followers to be real people that are truly interested in my content !
-besides being only mutuals with friends, i can safely say that i really appreciate every single person that interact with my posts ♡
-all of my comfy & positive content is made with my honest feelings, so yes, i am happy that my accounts are growing !!
-i can reach all of these lovely people with my stuff, it's surely a good thing, it's exactly the reason why i keep my accounts and don't just post everything in this website.
-sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts ..
-tumblr is my fav place to post images in original quality ; youtube is my fav place to make playlists ; twitter is my fav place to post ascii art ; instagram is my fav place to post interactive content .
-i really want to post all of these things, to inspire and make people smile with these things.. !
-if i can't reach many people by simply posting everything in my website, i am keeping these accounts happily until the day i feel that they're not useful anymore ♡
-
-btw, recently i've been getting tired of my tumblr layouts, so i decided to finally make some new ones !
-i'm so happy with these, it warms my heart ..</pre><br>
-<br><br>
-
-<center><img width="370px" height="auto" src="https://i.imgur.com/K3GRsRj.png"/></center><br><br>
-<center><img width="370px" height="auto" src="https://i.imgur.com/viLIPsP.png"/></center><br>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-do you like it ? <img src="https://i.imgur.com/nMbwy3K.gif"/>
-even if i'm not very used to make tumblr layouts, i could manage to make these work well...
-i kinda made a mess with the codes, i don't feel very confident to make these for other people ///
-but i really like making layouts outside platforms so if you want to have a cute website remember that commissions are open ♡
-
-that's it for today, now i'm gonna embroider a little bit.. wish me luck <img src="https://i.imgur.com/6yh79YL.gif"/>
-
-xoxo <img src="https://i.imgur.com/hhsqaw6.gif"/></pre><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
 
 <br><br><br>
 
