--- a/milkywoods.html
+++ b/milkywoods.html
@@ -480,7 +480,8 @@ click to play !
 <br><br>
 <table style="border-spacing: 5px;">
 <tr>
-<center><a href="/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/OCtL8fg.png"/></a></center>
+<td><a href="/fluffymaid"><img height="auto" width="100" src="https://i.imgur.com/Cw5SPhx.png"/></a> </td>
+<td><a href="/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/OCtL8fg.png"/></a> </td>
 </tr>
 <tr>
 <td><a href="/tinykittens"><img height="auto" width="100" src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
