--- a/milkywoods.html
+++ b/milkywoods.html
@@ -410,64 +410,6 @@ function getPosition(el) {
 }
 </script>
 
-<div style="float: left;">
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
-<br>
-<br>
-　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br>
-</div>
-
-<div style="float: right;">
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
-<br>
-<br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br>
-</div>
-
 <div style="position:absolute; left:10%; right:10%;">
 <center>
 <sub><img src="https://i.imgur.com/kDn09fO.gif"/></sub>　<font color="#998d7d">milky woods</font>　<sub><img src="https://i.imgur.com/kDn09fO.gif"/></sub>
@@ -480,20 +422,20 @@ click to play !
 <br><br>
 <table style="border-spacing: 5px;">
 <tr>
-<td><a href="/fluffymaid"><img height="auto" width="100" src="https://i.imgur.com/Cw5SPhx.png"/></a> </td>
-<td><a href="/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/OCtL8fg.png"/></a> </td>
+<td><a href="/fluffymaid"><img src="https://i.imgur.com/Cw5SPhx.png"/></a> </td>
+<td><a href="/jumpjump"><img src="https://i.imgur.com/OCtL8fg.png"/></a> </td>
 </tr>
 <tr>
-<td><a href="/tinykittens"><img height="auto" width="100" src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
-<td><a href="/bunnyshop"><img height="auto" width="100" src="https://i.imgur.com/Beri781.gif"/></a> </td>
+<td><a href="/tinykittens"><img src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
+<td><a href="/bunnyshop"><img src="https://i.imgur.com/Beri781.gif"/></a> </td>
 </tr>
 <tr>
-<td><a href="/honeytime"><img height="auto" width="100" src="https://i.imgur.com/mytMMb1.png"/></a> </td>
-<td><a href="/softdesserts"><img height="auto" width="100" src="https://i.imgur.com/iUrLxM9.png"/></a> </td>
+<td><a href="/honeytime"><img src="https://i.imgur.com/mytMMb1.png"/></a> </td>
+<td><a href="/softdesserts"><img src="https://i.imgur.com/iUrLxM9.png"/></a> </td>
 </tr>
 <tr>
-<td><a href="/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
-<td><a href="/drawing"><img height="auto" width="100" src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
+<td><a href="/bearcare"><img src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
+<td><a href="/drawing"><img src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
 </tr>
 </table>
 
