--- a/fluffymaid.html
+++ b/fluffymaid.html
@@ -211,7 +211,7 @@ z-index: 3;
 <br><br>
 <br>
 <center>
-<object width="450" height="337"><param value="https://files.catbox.moe/j7rice.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/8oq43k.swf"></embed></object>
+<object width="450" height="337"><param value="https://files.catbox.moe/j7rice.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/j7rice.swf"></embed></object>
 
 <br><br>
 <font family = "Verdana"><font color="#675656"><font size="1">﻿instructions : help the fluffy maid to clean the house !</font></font></font><br><br>
