--- a/jumpjump.html
+++ b/jumpjump.html
@@ -210,7 +210,7 @@ z-index: 3;
 <br><br>
 <br>
 <center>
-<object width="500" height="333"><param value="https://files.catbox.moe/i1ntb1.swf" name="movie"/><param value="high" name="quality"/><embed width="400" height="267" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/up4thg.swf"></embed></object>
+<object width="500" height="333"><param value="https://files.catbox.moe/i1ntb1.swf" name="movie"/><param value="high" name="quality"/><embed width="400" height="267" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/j7rice.swf"></embed></object>
 
 
 <br><br>
