--- a/portfolio.html
+++ b/portfolio.html
@@ -210,7 +210,7 @@ z-index: 3;
 <div style="background-image:url(https://i.imgur.com/x9mxyB4.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 100%">
 
 <div style="width: 650px;height: 25px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/Vhet6sr.png"><img src="https://i.imgur.com/Vhet6sr.png"><img src="https://i.imgur.com/Vhet6sr.png"></div>
-<div style= "padding-left: 25%; padding-right: 25%;">
+<div style= "padding-left: 10%; padding-right: 10%;">
 
 <style>
 #linkzinhoinho { color: #d6abab; }
@@ -297,8 +297,8 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="300px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
+<img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -306,7 +306,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<object width="300" height="300"><param value="https://files.catbox.moe/8oq43k.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/8oq43k.swf"></embed></object>
+<object width="450" height="337"><param value="https://files.catbox.moe/j7rice.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/j7rice.swf"></embed></object>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
