--- a/status.html
+++ b/status.html
@@ -322,6 +322,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>17.10.19</sup></font> <font color="#a0acbc">→</font>　he melts me with love .. 
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>03.10.19</sup></font> <font color="#9cb7b7">→</font>　let me be with you ♡♡
 
 <br><br><br>
@@ -347,9 +350,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>04.04.19</sup></font> <font color="#c48d8d">→</font>　vanilla ice cream melting away ~
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>03.01.19</sup></font> <font color="#a0acbc">→</font>　this layout makes me so happy !
 
 
 
