--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,61 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/auVtubS.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 16 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/kpgQWKv.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+waaa middlepot.com is now 2 years old <font color="#d3a5a5" style="font-size:11px;">♡</font> !!
+and i am 22 .. this will be the year of the little swans <sub><img src="https://i.imgur.com/6B5aDBN.gif"/></sub>
+i'm very proud of all the effort i put in this website to keep it a nice place for me and you, reading this..
+i hope i can keep improving more & more, please keep supporting me <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+all the love i receive will be forever cherished by me... i will never forget the messages, i will never stop trying my best to make you smile <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+thank you ,, for everyting <sub><img src="https://i.imgur.com/Rwj4xOw.gif"/></sub>
+
+after a very energetic phase, my slow mood is back <sub><img src="https://i.imgur.com/tEm1jSL.gif"/></sub>
+i still keep doing my tasks, but i haven't really did much extra this month ~
+since august is a special month for me, i think it's a well deserved time for me to just relax, right ?
+but i hope i will feel motivated soon so i can keep going with my projects because i have lots of things i want to try out !!
+i have been sewing some things, but my big projects are staying still until i feel 100%
+maybe all i need is just going outside a little more <sub><img src="https://i.imgur.com/K6dVR8t.gif"/></sub>
+making good memories with bubu is always the best way to make me super motivated <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+
+so, as i said in the previous post i was trying some new embroidering techniques..
+i made two very cute frames with a teddy bear and a bunny :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/yNFqGrB.png"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/HV5OX26.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really like it, i think it turned out so delicate .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+what do you think of these ? have you ever seen this kind of embroidering ?
+i wanted them to have lots of lace, ribbons and cute details
+these are on <a text-decoration: none; href="https://shybunny.middlepot.com" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my online store</font></a>, so go check it out !!
+
+that's about it for today.. !
+i hope you're treating yourself gently <font color="#d3a5a5" style="font-size:11px;">♡</font>
+you deserve kindness, don't ever forget !!
+
+xoxo <sub><img src="https://i.imgur.com/EvXCToz.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/auVtubS.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/g1WEZen.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
