--- a/fashion.html
+++ b/fashion.html
@@ -333,6 +333,11 @@ p { margin: 0; }
 <center>
 
 <br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 10.24.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/MdMNapR.png"/><br>
+<br>
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
 <br>
@@ -378,12 +383,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.15.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/iYVJj7e.png"/><br>
-<br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 07.24.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/z3qObSr.png"/><br>
 <br>
 
 
