--- a/blog.html
+++ b/blog.html
@@ -350,7 +350,7 @@ i think it sounds very gentle.. <font color="#d3a5a5" style="font-size:11px;">â™
 
 well, do you remember this game project i've been doing slowly since last year, that is halloween themed ?
 i'm still in progress of writing the script ( it's a long story, i'm writing in portuguese too and i only write once a week so yes it's taking a while ) and i've decided to make a cute html page to put it, since the original document was ugly and boring and i was honestly tired of looking at it every week....
-it's a super cute cotagecore autumn themed page where i will write the script <sub><img src="https://i.imgur.com/XumCeQR.gif"/></sub></pre><br>
+it's a super cute cottagecore autumn themed page where i will write the script <sub><img src="https://i.imgur.com/XumCeQR.gif"/></sub></pre><br>
 <br>
 
 <center><a href="https://pumpkin.shop.tm" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/OPFfL85.png"/></a></center><br>
