--- a/links.html
+++ b/links.html
@@ -303,6 +303,8 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 110px; height: 50px; overflow-x:hidden;">
+<a id="ooo" title="game script in progress" href="https://pumpkin.shop.tm" target="_blank" >pumpkin.shop.tm</a>
+<br>
 <a id="ooo" title="ideal ib simulation" href="https://pufchan.fr.to" target="_blank" >pufchan.fr.to</a>
 <br>
 <a id="ooo" title="ragnarok online scenarios" href="https://kafra.ro.lt" target="_blank" >kafra.ro.lt</a>
@@ -317,8 +319,7 @@ z-index: 3;
 <br>
 <a id="ooo" title="my routine" href="https://comfy.now.im" target="_blank" >comfy.now.im</a>
 <br>
-<a id
-="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
+<a id="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
 <br>
 <a id="ooo" title="html test" href="https://honey.bearfacts.net" target="_blank" >honey.bearfacts.net</a>
 <br>
