--- a/credits.html
+++ b/credits.html
@@ -386,17 +386,15 @@ moveupvar=setTimeout("moveup()",20)
 
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">hosting sites that i currently use :</font></font></font><br><br>
 <font family = "Verdana"><font color="#ddb5b5"><font style="font-size:9px">
-　　　server : github<br>
 　　　html : github<br>
-　　　image : imgur / catbox.moe<br>
+　　　image : imgur / catbox.moe / google photos<br>
 　　　mp3 : catbox.moe<br>
+　　　rar : catbox.moe<br>
 　　　webm : catbox.moe<br>
+　　　swf : catbox.moe<br>
 　　　font : catbox.moe<br>
 　　　txt : catbox.moe<br>
-　　　swf : catbox.moe<br>
-　　　rar : catbox.moe<br>
-　　　folder : google drive<br>
-　　　script : google drive<br><br>
+<br>
 </font></font></font>
 <font family = "Verdana"><font color="#B3A49A"><font size="1">
 <font size="2">※</font> i'll update this list whenever i change a hosting.<br>
@@ -405,9 +403,9 @@ moveupvar=setTimeout("moveup()",20)
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　　[ important safety tips ]<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-i'm sorry, this website use some cookies !<br>
-this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not very pleasant, but i think it's inevitable in some cases.<br>
-that's okay if you don't want to keep cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
+i'm sorry, i do bake some cookies in this website !<br>
+this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not always welcome, but i think it's inevitable in some cases.<br>
+that's okay if you don't want cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
 if you don't like javascript or flash, you can disable it too in your browser settings, this website works 80% ok without these.<br>
 also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
 <br>
