--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -316,6 +316,33 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#ba9187">
+<img src="https://i.imgur.com/TkaVrz0.png"><br><br>
+november . 08 . 2019<br>
+✄ small delight
+</font>
+</center>
+<font color="#C2B1B1">
+<br><br>
+
+　fragments of happiness carry you away ..<br>
+　　　　　　　it comes in a lovely surprise<br>
+　　　　　　　　it was all worth it !!!<br>
+　　　　　　　　　　　　　　it disappears briefly ,<br>
+　　　　　　　　　　　　leaving thin air and warm nostalgia .<br>
+<br>
+　you desperately try to collect the pieces ,<br>
+　　since joy is a secret gift hidden in little things ..<br>
+　　　　　　　　　it is there waiting for you to grab it tightly ♡
+<br><br>
+</font>
+
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#a8947c">
 <img src="https://i.imgur.com/0QvTpoL.png"><br><br>
 october . 03 . 2019<br>
@@ -426,34 +453,6 @@ february . 10 . 2019<br>
 <br><br>
 </font>
 
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-<div style="text-align:left">
-<center><font color="#a8947c">
-<img src="https://i.imgur.com/0QvTpoL.png"><br><br>
-november . 29 . 2018<br>
-✄ potato being
-</font>
-</center>
-<font color="#c1ae99">
-<br><br>
-
-　　"Now you're a potato"<br>
-　　Our story begins with that phrase. And what does it mean? I don't know.<br>
-　　Let's try to understand together. At the end of the year everyone waits for 00:00 (midnight, if you don't know), to become simple and insignificant potatoes. How insignificant? Potatoes are also people!<br>
-　　In fact, potatoes require their potato rights! And what are these? I don't know.<br>
-　　Potatoes want the honest and straightforward right to be potatoes, but not any potatoes, they want to be you! That explains the sentence with which we begin our text.<br>
-　　But wait there, how do potatoes want to be us? I don't know.<br>
-　　Potatoes, not having their own rights, want our rights, of being potatoes. And what are our rights? I don't know.<br>
-　　How much do potatoes want from us? What rights do they seek in us? I don't know, and I don't know.<br>
-　　Or maybe I know; all they want is to have the right to taste us, just like we do with them!<br>
-　　"Now you're a potato", and what will you do? Savor a being potato!
-<br><br>
-<center>E N D</center>
-</font>
 
 <br><br><br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
