--- a/portfolio.html
+++ b/portfolio.html
@@ -298,7 +298,8 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
+<img width="350px" height="auto" src="https://i.imgur.com/tBuoQYd.png"><br><br><br>
+<img width="135px" height="auto" src="https://i.imgur.com/V1hKb0T.png"> <img width="135px" height="auto" src="https://i.imgur.com/qUi9ByM.png"> <img width="135px" height="auto" src="https://i.imgur.com/zXLN6tk.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -315,9 +316,11 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img src="https://i.imgur.com/VkyeSzb.gif"> <img src="https://i.imgur.com/fwrhemF.gif"> <img src="https://i.imgur.com/yIxCUeJ.gif"> <img src="https://i.imgur.com/4RWxo8a.gif"><br><br>
-<img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
-<img src="https://i.imgur.com/bvAiMrD.gif"> <img src="https://i.imgur.com/7mKu6kW.png">
+<img src="https://i.imgur.com/5UJWsUc.png"><img src="https://i.imgur.com/5UJWsUc.png"><br><br>
+<img width="40" height="auto" src="https://i.imgur.com/w3nIJKw.png"> <img width="40" height="auto" src="https://i.imgur.com/oEETh0f.png"> <img width="40" height="auto" src="https://i.imgur.com/OoVhpd0.png"><br><br>
+<img width="110" height="auto" src="https://i.imgur.com/wSRLuW7.png"><br><br>
+<img width="auto" height="60" src="https://i.imgur.com/kjJ7zti.gif">　<img width="auto" height="60"src="https://i.imgur.com/hxS2jLj.gif"><br><br>
+<img width="auto" height="60" src="https://i.imgur.com/bvAiMrD.gif">　<img width="auto" height="60"src="https://i.imgur.com/7mKu6kW.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
