--- a/fashion.html
+++ b/fashion.html
@@ -498,6 +498,14 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/P7rqRld.jpg"/><br><br>
 <br>
 
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/rjifwbh.jpg"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/YwouNql.jpg"/><br><br>
+<br>
+
 
 <br><br>
 
