--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@ z-index: 3;
 <div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 100%">
 <center><sub><sub><img src="https://i.imgur.com/96xhX4a.gif"></sub></sub>　<font color="#d3a5a5" size=1>updates</font>　<sub><sub><img src="https://i.imgur.com/8rwotzX.gif"></sub></sub></center>
 <br>
+　　11.20 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> tips on: <font color="#DFB7B7">help page</font><br>
 　　11.20 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> entry on: <font color="#DFB7B7">status page</font><br>
 　　11.20 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> pictures on: <font color="#DFB7B7">fashion page</font><br>
 　　11.20 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> stuff on: <font color="#DFB7B7">portfolio</font><br>
 　　11.11 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> entry on: <font color="#DFB7B7">status page</font><br>
-　　11.08 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> poem on: <font color="#DFB7B7">tiny journal</font><br>
 </div>
 </center>
 
