--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,95 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>september . 19 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <sub><img src="https://i.imgur.com/KIxCSYI.png"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+finally, i got in a balanced mood while i can be productive but also rest properly <sub><img src="https://i.imgur.com/TaK2n61.gif"/></sub>
+this is such a relief because i've got to start and finish some personal projects, made new things for the shy bunny store + got enough sleep, chatted with friends, didn't felt super anxious.. !!
+i hope i can keep it like this for a long time because i'm feeling so much joy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i've also become more active on my accounts, making content and being interactive !
+( careful not to get overwhelmed !! - i gotta keep reminding myself, always )
+i finally started using the "close friends" function of instagram in a more organized way now : while i post self care reminders for everyone i always have some more personal stuff to share with my mutuals ( like venting or showing my self improvement )
+i believe this is quite related to the acc purpose for it can motivate others to overcome their own troubles, but i'm just too shy to post it for all of my followers so i keep the public content more impersonal <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+it's a little hard to be productive while respecting my schedule, but i got it pretty well these last weeks <sub><img src="https://i.imgur.com/lbIAx2D.gif"/></sub>
+i know it's a good phase and phases come and go,, but i do feel proud of myself for having good phases just as often as the bad ones .. actually, these bad phases are not even bad, i just have a hard time accepting that i deserve ( and need ) to chill and be lazy sometimes ; ;
+one day, i know, i will love myself the way i deserve <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+now changing subjects , after receiving many requests of mutuals, i decided to share my line acc in my links page !!
+i made a new one, with a very cute id ( @pomf ) and i'm happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+while discord is my fav app for group chat ( because of all the features & bots ) line is actually my fav for private messages,, it's the app i use for talking with bubu and we even have matching pfp there <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+as you already know i love collecting line themes, stickers & emojis.. i use this app for some years now and i really like it, so i would like to add more friends there <sub><img src="https://i.imgur.com/4oQuNAB.gif"/></sub>
+i think discord private messages are really boring - just like line groups are boring - so for me both complement each other perfectly !!
+of course i use any chat in any account i have for talking with people, if they prefer like this, but i do have my own preferences ..
+
+soo, lately i've been doing a cleaning in my wardrobe, then i realized i only use 1/3 of my clothes..
+most of it was basic clothes from when i was a teenager and wasn't sure of my style yet, i was keeping these there just because LOL
+i gave most of it to friends and my younger cousins, but some of these were actually cute and has potential !!
+now that i can sew, i tried renewing these and make them perfect for me again : i fixed them, added lace, ribbons & details <font color="#d3a5a5" style="font-size:11px;">♡</font>
+now i have a lot of cute "new" clothes that i'm very excited to try out !!!
+i also have been sewing some, and bought some others from thrift stores,, so i'm completely satisfied.
+i never had so many cute clothing before !!
+i'm gonna show you one of my favorite outfits :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/yZDQncB.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+isn't it absolutely precious ? 
+the little apron is just.. too cute ; ;
+( i also made a "full body" apron with the same fabric and lace but it's actually for using in a practical way, not as accessory )
+
+now, i have a collage that i made recently and wanted to show you :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/zigfoTh.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/sq23v3.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">fairy garden html .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's a "fairycore" one i made for mother nature.. i love her so much <sub><img src="https://i.imgur.com/W50nV00.gif"/></sub>
+this is such an inspiration for me, and i aim to be in contact with nature more and more each day <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i also have this melody that complements the theme :</pre><br>
+<br><br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/rbrsbd.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">secret kingdom .mp3</font></a>　
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think it's very beautiful, i'm proud of it ..
+
+for today, that's it !! i talked a lot already so it's time to go...
+thank you a lot for always giving me so much love & support <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+xoxo <sub><img src="https://i.imgur.com/rVjHzUD.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/auVtubS.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
