--- a/blog.html
+++ b/blog.html
@@ -308,6 +308,82 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img width="330" height="auto" src="https://i.imgur.com/voTDmbX.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>november . 28 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/i7huzO1.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this month .. i worked a whole lot but i somehow managed to rest a lot more than i usually do
+i had some very energetic moments, extremely sleepy moments, talkative moments and completely quiet moments !!
+it was a mess and i'm tired, but at least i did things i'm very proud of that i want to show you today <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i hope my emotions will get together this new month so i can feel less anxious. when i'm all over the place like this i always get confused at some point, act out of myself, feel dissociated and get embarrassed <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+but everything is okay, after all, it's natural to have different moods and i'm always doing my best and learning from any mistakes ( even the smallest ones )
+i will make sure to be patient.. i have to put myself first if i want to be happy, being a caring person includes caring about my own well-being and validating my efforts !!
+i know that forcing myself to socialize is big part of my anxiety so i will keep cautious not to overdo it and stay in a safe place. i can and will make people smile within my capacity, fill my life with good experiences while respecting my limits. <sub><img src="https://i.imgur.com/1kNoTYw.gif"/></sub>
+also, a little reminder for me and anyone reading this : be yourself. self improvement is not about trying to fit in. it doesn't matter if someone would like you more if you acted like this or that, it doesn't matter if someone thinks you're weird, it doesn't matter. stay pure and be proud of who you are. don't try to get included, don't base your growth on what others see, it's not worth it.
+focusing on my improvement, creating content i feel truly proud of and decentralizing the attention of my ego is what i long for !! enough of pain for not being perfect for others, i will perfect myself.. for myself <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i love helping, i want to inspire and be inspired. i must keep myself pure if i want to heal. only a heart full of love can spread kindness !
+
+let's go for the content !! this month i made some really cute things, i'm excited to show you <font color="#d3a5a5" style="font-size:11px;">♡</font>
+first, my secret project from poofties, finally started :</pre><br>
+<br>
+
+<center><video width="410" height="251" controls>
+<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
+</video></center><br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these will be a series of 1min videos with this *big* story i have in mind for.. some years now
+everything made with collages of real life things, except for the characters !!
+i think it looks really cute, it takes a long while to search, edit and put everything together but i had a lot of fun <sub><img src="https://i.imgur.com/KyUyLXO.gif"/></sub>
+the "voice acting" is absolutely amateur ( and a little embarrassing ) but i'm okay with this.. what can i do ? LOL
+please let me know your opinions, i'm not used to video editing and some things ( specially the audio ) can be a little off so i would really appreciate the opinion of someone more experienced
+
+all the melodies used will be composed by me ( i've already started with the next one actually )
+this is the one i've used in this episode :</pre><br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/xcbdd6.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a>　
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+a lively and adorable midi, i'm happy with it <sub><img src="https://i.imgur.com/JzNv9qo.gif"/></sub>
+not the most creative melody because i wanted these to be simple and not distracting, so expect to hear some loops !
+
+the next thing i'm showing today is a simple but lovely idea a friend gave me : collage wallpapers with self care reminders
+( i have these on my instagram highlights )</pre><br>
+<br>
+
+<center><img width="135px" height="auto" src="https://i.imgur.com/V1hKb0T.png"> <img width="135px" height="auto" src="https://i.imgur.com/qUi9ByM.png"> <img width="135px" height="auto" src="https://i.imgur.com/zXLN6tk.png"></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+as you already know, i love making collages, it's really relaxing for me so i will certainly make some more of these in the near future.. !
+it's always nice to practice making visuals with different aesthetics, right ?
+
+i hope you, lovely reader, is taking good care of yourself <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+the year is almost finished .. let's fill our hearts with hope for new experiences
+
+xoxo <sub><img src="https://i.imgur.com/amkCF1V.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img width="330" height="auto" src="https://i.imgur.com/voTDmbX.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/6WRCosW.gif"/><img src="https://i.imgur.com/6WRCosW.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -455,93 +531,6 @@ xoxo <sub><img src="https://i.imgur.com/UtRe6pG.gif"/></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>september . 19 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <sub><img src="https://i.imgur.com/KIxCSYI.png"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-finally, i got in a balanced mood while i can be productive but also rest properly <sub><img src="https://i.imgur.com/TaK2n61.gif"/></sub>
-this is such a relief because i've got to start and finish some personal projects, made new things for the shy bunny store + got enough sleep, chatted with friends, didn't felt super anxious.. !!
-i hope i can keep it like this for a long time because i'm feeling so much joy <font color="#d3a5a5" style="font-size:11px;">♡</font>
-
-i've also become more active on my accounts, making content and being interactive !
-( careful not to get overwhelmed !! - i gotta keep reminding myself, always )
-i finally started using the "close friends" function of instagram in a more organized way now : while i post self care reminders for everyone i always have some more personal stuff to share with my mutuals ( like venting or showing my self improvement )
-i believe this is quite related to the acc purpose for it can motivate others to overcome their own troubles, but i'm just too shy to post it for all of my followers so i keep the public content more impersonal <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-
-it's a little hard to be productive while respecting my schedule, but i got it pretty well these last weeks <sub><img src="https://i.imgur.com/lbIAx2D.gif"/></sub>
-i know it's a good phase and phases come and go,, but i do feel proud of myself for having good phases just as often as the bad ones .. actually, these bad phases are not even bad, i just have a hard time accepting that i deserve ( and need ) to chill and be lazy sometimes ; ;
-one day, i know, i will love myself the way i deserve <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-
-now changing subjects , after receiving many requests of mutuals, i decided to share my line acc in my links page !!
-i made a new one, with a very cute id ( @pomf ) and i'm happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
-while discord is my fav app for group chat ( because of all the features & bots ) line is actually my fav for private messages,, it's the app i use for talking with bubu and we even have matching pfp there <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-as you already know i love collecting line themes, stickers & emojis.. i use this app for some years now and i really like it, so i would like to add more friends there <sub><img src="https://i.imgur.com/4oQuNAB.gif"/></sub>
-i think discord private messages are really boring - just like line groups are boring - so for me both complement each other perfectly !!
-of course i use any chat in any account i have for talking with people, if they prefer like this, but i do have my own preferences ..
-
-soo, lately i've been doing a cleaning in my wardrobe, then i realized i only use 1/3 of my clothes..
-most of it was basic clothes from when i was a teenager and wasn't sure of my style yet, i was keeping these there just because LOL
-i gave most of it to friends and my younger cousins, but some of these were actually cute and has potential !!
-now that i can sew, i tried renewing these and make them perfect for me again : i fixed them, added lace, ribbons & details <font color="#d3a5a5" style="font-size:11px;">♡</font>
-now i have a lot of cute "new" clothes that i'm very excited to try out !!!
-i also have been sewing some, and bought some others from thrift stores,, so i'm completely satisfied.
-i never had so many cute clothing before !!
-i'm gonna show you one of my favorite outfits :</pre><br>
-<br><br>
-
-<center><img width="370px" height="auto" src="https://i.imgur.com/yZDQncB.png"/></center><br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-isn't it absolutely precious ? 
-the little apron is just.. too cute ; ;
-( i also made a "full body" apron with the same fabric and lace but it's actually for using in a practical way, not as accessory )
-
-now, i have a collage that i made recently and wanted to show you :</pre><br>
-<br><br>
-
-<center><img width="370px" height="auto" src="https://i.imgur.com/zigfoTh.png"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/sq23v3.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">fairy garden html .rar</font></a>　</center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it's a "fairycore" one i made for mother nature.. i love her so much <sub><img src="https://i.imgur.com/W50nV00.gif"/></sub>
-this is such an inspiration for me, and i aim to be in contact with nature more and more each day <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i also have this melody that complements the theme :</pre><br>
-<br><br>
-
-<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/rbrsbd.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">secret kingdom .mp3</font></a>　
-</center>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i think it's very beautiful, i'm proud of it ..
-
-for today, that's it !! i talked a lot already so it's time to go...
-thank you a lot for always giving me so much love & support <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-
-xoxo <sub><img src="https://i.imgur.com/rVjHzUD.gif"/></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
 
 <br><br><br>
 
