--- a/stories.html
+++ b/stories.html
@@ -214,7 +214,7 @@ z-index: 3;
 <font color="#e8c8d2" style="font-size:10px;">( click the preview for watching )</font><br><br><br>
 
 <font color="#b89a9a" style="font-size:10px;">first episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">good morning</font><br><br>
-<a href="/i" target="_blank"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a></center><br>
+<a href="/i"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a></center><br>
 </center>
 
 <br><br><br>
