--- a/links.html
+++ b/links.html
@@ -337,8 +337,8 @@ z-index: 3;
 <font color="#dbafaf">
 <sub><sub><img src="https://i.imgur.com/VMNuA8L.png"></sub></sub> active accs :<br></font>
 <br>
-　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="graphics blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/soffft" target="_blank" >♡</a>　<font color="#7a6b6b">tt </font><a id="actv" title="comfy acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.my.to" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">twt </font><a id="actv" title="comfy acc" href="https://twitter.com/pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/pooftie" target="_blank" >♡</a><br>
 <br>
 </div>
 <br><br><br><br><br><br><br><br>
@@ -346,7 +346,7 @@ z-index: 3;
 <div style="position:absolute; left:25%; right:25%; top:45%;">
 <font color="#a59490">
 <center><b>important :</b><br><br>
-i do have some secret accounts that i use for backup or personal stuff. on social media accs, i don't use the middlepot name, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
+i do have some secret accounts that i use for backup or personal stuff. i don't use the middlepot name on social media accs, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
 if you have any questions about an account, please don't hesitate to contact me :<br><br></font>
 <font id="linkzinho" color="#cea9a9">letters@middlepot.com</font></font></center>
 <br><br><br>
