--- a/portfolio.html
+++ b/portfolio.html
@@ -236,7 +236,7 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/4t3RoGq.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/DWF38dg.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/eMPybHB.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
@@ -337,6 +337,16 @@ z-index: 3;
 <center>
 
 
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> video editing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<video width="450" height="auto" controls>
+<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
+</video>
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/l8kn8o.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
 <br><br><br><br>
@@ -345,8 +355,8 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/pEvgVlJ.gif"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/wowZaeP.png">
+<img width="220px" height="auto" src="https://i.imgur.com/mNmqyU6.gif"><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/SMPtGMQ.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
