--- a/recommended.html
+++ b/recommended.html
@@ -313,7 +313,7 @@ z-index: 3;
 <br><br><br>
 
 　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
-　<a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/Ex531VA.gif"></a>
+　<a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
 　<a href="https://cappuyeon.blogspot.com" target="_blank"><img src="https://i.imgur.com/oKrXeSb.gif"></a>
 
 　　<br><br><a href="https://mimi-dollie.blogspot.com" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
