--- a/recommended.html
+++ b/recommended.html
@@ -312,9 +312,13 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
+　<a href="https://howtobecomeanangel.neocities.org" target="_blank"><img src="https://i.imgur.com/dLNVRTT.png"></a>
+　<a href="https://reia.neocities.org" target="_blank"><img src="https://i.imgur.com/Oo4OZuP.png"></a>
+　<a href="https://melodicake.neocities.org" target="_blank"><img src="https://i.imgur.com/JgeSrkA.gif"></a>
+
+　　<br><br><a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
 　<a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
-　<a href="https://cappuyeon.blogspot.com" target="_blank"><img src="https://i.imgur.com/oKrXeSb.gif"></a>
+　<a href="https://hearted.neocities.org" target="_blank"><img src="https://i.imgur.com/9dnb1z6.gif"></a>
 
 　　<br><br><a href="https://mimi-dollie.blogspot.com" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
