--- a/commissions.html
+++ b/commissions.html
@@ -378,11 +378,10 @@ all the text will be edited later on, as you wish.<br>
 <style>
 #mm { color: #aa998c; }
 </style>
-<font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> or :<br><br>
-　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Wq5NhFm" target="_blank" >@puf#0008</a><br>
-　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br>
-　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a><br>
-　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a><br>
+<font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> , through my email ( letters@middlepot.com ) or through one of these :<br><br>
+　　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
+　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
+　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Wq5NhFm" target="_blank" >puf#0008</a>
 
 <br>
 
